--- a/src/App.css
+++ b/src/App.css
@@ -131,3 +131,20 @@ h2 {
     color: #ADADAD;
 }
 
+@media (max-width: 1440px) {
+  .main_container {
+    margin-right: 100px;
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    margin-left: auto;
+    padding: 2rem;
+  }
+
+  .client_card_container {
+      font-size: 0.1rem;
+  }
+}
+
+
+
